# stock

./: .env.example  .gitignore  CHANGES.md  DATA_INTEGRATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.minimal  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_2025.md  IMPROVEMENT_PLAN.md  LIVE_TRADING_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  QUANTITATIVE_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  SHORT_TERM_OPTIMIZATIONS_COMPLETE.md  SYSTEM_ENHANCEMENTS_v2.md  TEST_REPORT.md  analysis_601127.SH_20250928_104143.json  analysis_601127.SH_20250928_104200.json  analyze_langchao.py  analyze_nonferrous.py  analyze_stock.py  backtest_t_trading.py  build.sh  comprehensive_demo.py  constraints.txt  docker-compose.prod.yml  enhanced_analyzer_demo.py  gold_backtest_comprehensive.py  jac_analysis_20250928_092001.json  jac_analysis_runner.py  jac_demo_analysis.py  jac_demo_analysis_20250928_092150.json  li_auto_analysis_20250928_092756.json  li_auto_analyzer.py  li_auto_chart_data_20250928_092909.json  li_auto_chart_generator.py  li_auto_simple_analysis_20250928_092909.json  (+19 more)
config/: prometheus.yml  risk_rules.yaml  settings.py  stock_symbols.py  strategies.yaml
docs/: API.md  ARCHITECTURE.md  BROKER_API_INTEGRATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LEARNING_PLAN_CN.md  MONITORING_GUIDE.md  PHASE1_PERSISTENT_CACHE_SUMMARY.md  PHASE2_ETF_ANALYZER_SUMMARY.md  PORTABILITY.md  PROGRESS_REPORT_CN.md  QUANTITATIVE_ENHANCEMENTS.md  QUANTITATIVE_SYSTEM_ARCHITECTURE.md  QUICK_START.md  README.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  WEEK1_IMPLEMENTATION_GUIDE.md  design.md  issues_import.csv  issues_import.json
docs/study/: ISSUE_IMPORT_GUIDE.md  README.md
docs/trading/: LIVE_TRADING.md  STRATEGY_GUIDE.md
examples/: backtest_hs300_etf_rotation.py  backtest_strategies.py  demo_app.py  demo_persistent_cache.py  improved_real_data_test.py  monitor_price.py  optimize_strategy.py  simple_real_app.py  simple_real_data_test.py
frontend/: index.html
frontend/static/: app.js  style.css
scripts/: build.sh  create_indexes.py  create_new_tables.sql  create_new_tables_sqlite.sql  deploy.sh  package.sh  validate.sh  verify_improvements.py
src/: app.py  scheduler.py
src/api/: __init__.py  indicators_api.py  metrics.py  stock_api.py
src/backtest/: __init__.py  cost_model.py  engine.py  market_simulator.py  performance.py  risk_manager.py
src/cache/: __init__.py  cache_manager.py  persistent_cache.py
src/core/: __init__.py  analyzer_factory.py  base_analyzer.py  data_sources.py  fundamental_analysis.py  sentiment_analysis.py  stock_config.py  technical_analysis.py
src/data_sources/: __init__.py  data_source_manager.py  kline_generator.py  realtime_feed.py  sina_finance.py
src/database/: __init__.py  optimize_indexes.py  session.py
src/middleware/: __init__.py  auth.py  cache.py  enhanced_validator.py  metrics_middleware.py  rate_limiter.py  validator.py
src/models/: __init__.py  base.py  stock.py
src/monitoring/: __init__.py  alert_manager.py  enhanced_metrics.py  metrics.py  price_alert.py  strategy_monitor.py
src/risk/: __init__.py  position_monitor.py  position_sizer.py  real_time_monitor.py  risk_config_loader.py
src/services/: __init__.py  batch_optimizer.py  data_collector.py  enhanced_data_collector.py  etf_analyzer.py  etl_tasks.py  fundamental_provider.py  indicators_calculator.py  jac_analyzer.py  market_data_fetcher.py  mock_data.py  real_data_provider.py  recommendation_engine.py  sentiment_provider.py  simple_recommendation.py
src/strategies/: __init__.py  boll_rsi_combo.py  bollinger_breakout.py  etf_t_trading.py  grid_trading.py  hs300_etf_rotation.py  mean_reversion.py  momentum.py  moving_average.py  rsi_reversal.py  strategy_loader.py
src/trading/: __init__.py  broker_adapter.py  broker_gateway.py  (+4 more)
tests/: conftest.py  test_alert_manager.py  test_api.py  test_cache_manager.py  test_enhanced_api.py  test_etf_analyzer.py  test_kline_generator.py  test_live_trading.py  test_metrics.py  test_persistent_cache.py  test_realtime_feed.py  test_risk_management.py  test_strategies.py  test_strategy_monitor.py  test_validator.py
todo/: CHINA_MARKET_TASKS.md  COMMERCIAL_GAP_CHECKLIST.md  README.md  ROADMAP_PHASES.md  SCHEMA_AND_MLOPS_TASKS.md  TECH_TASKS_PRIORITIES.md
(+10 files in other folders)
